--- a/roadrage/Gemfile
+++ b/roadrage/Gemfile
@@ -32,7 +32,7 @@ gem "letter_opener", :group => :development
 
 gem 'intercom-rails'
 
-
+gem 'edmunds_ruby'
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
